# Simple-Ai-IDE

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LOCAL_INSTALL.md  README.md  capsules.db-shm  capsules.db-wal  docker-compose.gpu.yml  docker_start_all.sh  docker_stop_all.sh  ollama_docker_start_all.sh  ollama_docker_stop_all.sh  package-lock.json  package.json  replit.md  start_all.sh  stop_all.sh  vllm_docker_start_all.sh  vllm_docker_stop_all.sh
.simpleaide/: model_catalog.json  settings.json
.simpleide/: secrets.enc  settings.json
attached_assets/: Pasted-A-Zero-space-usability-polish-Phase-UX1-Implement-zero-_1769684779820.txt  Pasted-Absolutely-Below-is-a-copy-paste-spec-you-can-give-to-a_1769672623462.txt  Pasted-Absolutely-Below-is-a-single-Database-tab-UX-that-works_1769686839379.txt  Pasted-Both-Here-s-a-copy-paste-ready-automated-smoke-runner-a_1769704021007.txt  Pasted-Given-what-you-have-right-now-the-best-move-is-don-t-ba_1769674381814.txt  Pasted-Here-s-a-clean-way-to-think-about-the-header-in-SimpleA_1769687478752.txt  Pasted-Here-s-the-prioritized-implementation-ready-task-list-w_1769701590505.txt  Pasted-Nice-Monaco-makes-this-easy-Here-s-a-Terminal-Noir-Mona_1769693384460.txt  Pasted-Perfect-this-runs-ts-is-solid-and-you-can-build-the-hea_1769688131900.txt  (+9 more)
server/simpleaide/templates/base-python/files/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
server/simpleaide/templates/base-python/files/src/: main.py
server/simpleaide/templates/base-python/files/src/routes/: health.py
(+102 files in other folders)
